- add colors to points - add legend - add images

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -22,7 +22,7 @@ mapentity_tags %} {% block attributes %}
   </tr>
   <tr>
     <th>Valeur patrimoniale</th>
-    <td>{{ object.notepatri_label }}</td>
+    <td>{{ object.notepatri }}</td>
   </tr>
   <tr>
     <th>Patrimonialité</th>
@@ -30,7 +30,7 @@ mapentity_tags %} {% block attributes %}
   </tr>
   <tr>
     <th>Type architectural</th>
-    <td>{{ object.code_classe_label }}</td>
+    <td>{{ object.code_classe }}</td>
   </tr>
   <tr>
     <th>Propriétaire</th>
@@ -62,7 +62,7 @@ mapentity_tags %} {% block attributes %}
   </tr>
   <tr>
     <th>Conservation</th>
-    <td>{{ object.codeconservation_label }}</td>
+    <td>{{ object.codeconservation }}</td>
   </tr>
 </table>
 
