- admin fixes - templates fixes

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -29,7 +29,7 @@ mapentity_tags %} {% block attributes %}
   </tr>
   <tr>
     <th>Type architectural</th>
-    <td>{{ object.code_classe }}</td>
+    <td>{{ object.classe }}</td>
   </tr>
   <tr>
     <th>Propriétaire</th>
@@ -114,11 +114,11 @@ mapentity_tags %} {% block attributes %}
   </thead>
   <tr>
     <th>Implantation</th>
-    <td>{{ object.codepem.label }}</td>
+    <td>{{ object.implantation.label }}</td>
   </tr>
   <tr>
     <th>Faitage</th>
-    <td>{{ object.codefaitage.label }}</td>
+    <td>{{ object.faitage.label }}</td>
   </tr>
   <tr>
     <th>Situation géographique</th>
