- add parentId to Nomenclature - fixes

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -61,7 +61,7 @@ mapentity_tags %} {% block attributes %}
   </tr>
   <tr>
     <th>Conservation</th>
-    <td>{{ object.codeconservation }}</td>
+    <td>{{ object.conservation }}</td>
   </tr>
 </table>
 
