--- a/patbati/bati/templates/bati/enquetes_form.html
+++ b/patbati/bati/templates/bati/enquetes_form.html
@@ -1,5 +1,5 @@
 {% extends "mapentity/mapentity_detail.html" %} {% block content %}
-<h2>Nouvelle enquête pour {{ view.bati }}</h2>
+<h2>Nouvelle enquête pour {{ view.bati.appelation }}</h2>
 <form method="post">
   {% csrf_token %} {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Enregistrer</button>
