--- a/patbati/bati/templates/bati/bati_extrabody_fragment.html
+++ b/patbati/bati/templates/bati/bati_extrabody_fragment.html
@@ -1,2 +1,3 @@
 {% load static %}
 <script type="text/javascript" src="{% static 'bati/color.js' %}"></script>
+<script type="text/javascript" src="{% static 'bati/collapse.js' %}"></script>
