--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -77,16 +77,33 @@ mapentity_tags %} {% block attributes %}
               <th>Etat général</th>
               <td>{{ object.conservation }}</td>
             </tr>
-            <tr>
-              <th>Perspectives</th>
-              <td>{{ object.perspectives }}</td>
-            </tr>
           </tbody>
         </table>
       </div>
     </div>
   </div>
 </div>
+
+   <div class="d-flex mb-2">
+    <h4>Perspectives </h4>
+    <button class="btn btn-success ml-2" >+</button>
+
+   </div> 
+    <table class="table table-striped">
+      <tr>
+        <th>Date</th>
+        <th>Perspective</th>
+        <th></th>
+      </tr>
+    
+        {% for pers in object.perspective_set.all %}
+        <tr>
+          <td> {{pers.date}}  </td>
+          <td> {{pers.perspective.label}} </td>
+          <td> <button class="btn btn-primary">  <i class="bi bi-pencil-square"></i> </button> </td>
+        </tr>
+      {% endfor %}
+    </table>
 
 <!-- Table Enquêtes (expanded by default) -->
 <div class="content mb-3">
