--- a/patbati/bati/templates/bati/perspectives_form.html
+++ b/patbati/bati/templates/bati/perspectives_form.html
@@ -6,7 +6,7 @@
 </form> -->
 {% block mainform %}
 <div class="container">
-  <h2>Nouvelle enquête pour {{ title }}</h2>
+  <h2>Nouvelle "perspective" pour {{ title }}</h2>
   {% crispy form %}
   </div>
 {% endblock mainform %}
