--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -55,7 +55,7 @@ mapentity_tags %} {% block attributes %}
             </tr>
             <tr>
               <th>Règlementation</th>
-              <td>{{ object.protection }}</td>
+              <td>{{ object.protection|default:"-" }}</td>
             </tr>
             <tr>
               <th>Capacité</th>
@@ -84,27 +84,33 @@ mapentity_tags %} {% block attributes %}
   </div>
 </div>
 
-   <div class="d-flex mb-2">
-    <h4>Perspectives </h4>
-    <a href="{% url 'bati:perspectives_add' pk=object.pk %}" class="btn btn-success ml-2" >+</a>
-          
+<div class="d-flex mb-2">
+  <h4>Perspectives</h4>
+  <a
+    href="{% url 'bati:perspectives_add' pk=object.pk %}"
+    class="btn btn-success ml-2"
+    >+</a
+  >
+</div>
+<table class="table table-striped">
+  <tr>
+    <th>Date</th>
+    <th>Perspective</th>
+    <th></th>
+  </tr>
 
-   </div> 
-    <table class="table table-striped">
-      <tr>
-        <th>Date</th>
-        <th>Perspective</th>
-        <th></th>
-      </tr>
-    
-        {% for pers in object.perspective_set.all %}
-        <tr>
-          <td> {{pers.date}}  </td>
-          <td> {{pers.perspective.label}} </td>
-          <td> <button class="btn btn-primary">  <i class="bi bi-pencil-square"></i> </button> </td>
-        </tr>
-      {% endfor %}
-    </table>
+  {% for pers in object.perspective_set.all %}
+  <tr>
+    <td>{{pers.date}}</td>
+    <td>{{pers.perspective.label}}</td>
+    <td>
+      <button class="btn btn-primary">
+        <i class="bi bi-pencil-square"></i>
+      </button>
+    </td>
+  </tr>
+  {% endfor %}
+</table>
 
 <!-- Table Enquêtes (expanded by default) -->
 <div class="content mb-3">
@@ -280,8 +286,15 @@ mapentity_tags %} {% block attributes %}
         <table class="table table-striped table-bordered mb-0">
           <tbody>
             <tr>
-              <th>Risque Naturel</th>
-              <td>{{ object.risques_nat|default:"-" }}</td>
+              <th>Risques naturels</th>
+              <td>
+                  {% for risque in object.risques_nat.all %}
+                  {{ risque.label }}{% if not forloop.last %}, {% endif %}
+                  {% empty %}
+                  Aucun risque naturel
+                  {% endfor %}
+                </ul>
+              </td>
             </tr>
             <tr>
               <th>Remarque risque naturel</th>
@@ -289,7 +302,13 @@ mapentity_tags %} {% block attributes %}
             </tr>
             <tr>
               <th>Masques</th>
-              <td>{{ object.masques|default:"-" }}</td>
+              <td>
+                {% for masque in object.masques.all %}
+                {{ masque.label }}{% if not forloop.last %}, {% endif %}
+                {% empty %}
+                Aucun masque
+                {% endfor %}
+              </td>
             </tr>
             <tr>
               <th>Commentaire Masque</th>
