add tab for travaux and structure

--- a/patbati/bati/templates/bati/bati_detail_attributes.html
+++ b/patbati/bati/templates/bati/bati_detail_attributes.html
@@ -1,5 +1,6 @@
 {% extends "mapentity/mapentity_detail_attributes.html" %} {% load i18n
-mapentity_tags %} {% block attributes %}
+mapentity_tags %}
+{% block attributes %}
 
 <!-- Table renseignements (expanded by default) -->
 <div class="content mb-3">
